Closed Bug 1208000 Opened 10 years ago Closed 10 years ago

Default browser dialog appears only 2 times

Categories

(Firefox :: Shell Integration, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 44
Tracking Status
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: vtamas, Assigned: jaws)

References

Details

Attachments

(1 file)

Note: this is a follow-up for Bug 1191250 Reproducible on: Firefox 44.0a1 and Firefox 43.0a2 across all platforms STR 1.Launch Firefox with clean profile. 2.Close Firefox. 3.Start Firefox again using the same profile and click “Not now button” that correspond to default browser dialog. 4.Close Firefox. 5.Repeat Step 3 and Step 4, 2 times. ER The default browser dialog appears for 3 consecutive browser runs, except the first one. AR The default browser dialog is not displayed when the browser is opened a fourth time. Additional notes: - This issue is reproducible on Firefox 44.0a1 (2015-09-23) and Firefox 43.0a2 (2015-09-23) under Windows 7 64-bit, Ubuntu 14.04 32-bit and Mac OS X 10.10.4.
Flags: needinfo?(jaws)
Attached patch PatchSplinter Review
This is because we skipped showing the dialog the first time the app is started (0), then we show it on the next invocations (1, 2), and when the pref has the value of 3 it is now over the threshold for the defaultBrowserCheckCount. I bumped up the condition so it will be shown three times now.
Assignee: nobody → jaws
Status: NEW → ASSIGNED
Flags: needinfo?(jaws)
Attachment #8665624 - Flags: review?(gijskruitbosch+bugs)
Attachment #8665624 - Flags: review?(gijskruitbosch+bugs) → review+
Comment on attachment 8665624 [details] [diff] [review] Patch Approval Request Comment [Feature/regressing bug #]: bug 1191250 [User impact if declined]: users on 43 will not see the default browser prompt enough [Describe test coverage new/current, TreeHerder]: simple patch, off by one error [Risks and why]: none [String/UUID change made/needed]: none
Attachment #8665624 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 44
Comment on attachment 8665624 [details] [diff] [review] Patch Simple change; let's uplift it to aurora.
Attachment #8665624 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
I have reproduced this bug on Nightly 44.0a1 (2015-09-23) on ubuntu 14.04 LTS, 32 bit! Build ID: 20150923030230 User Agent: Mozilla/5.0 (X11; Linux i686; rv:44.0) Gecko/20100101 Firefox/44.0 Also reproduced this bug on Aurora 43.0a2 (2015-09-23) on ubuntu 14.04 LTS, 32 bit! Build ID: 20150923004024 User Agent: Mozilla/5.0 (X11; Linux i686; rv:43.0) Gecko/20100101 Firefox/43.0 The bug's fix is now verified on Latest Nightly 44.0a1(2015-10-07)! Build ID: 20151007030205 User Agent: Mozilla/5.0 (X11; Linux i686; rv:44.0) Gecko/20100101 Firefox/44.0 [bugday-20151007]
Status: RESOLVED → VERIFIED
This bug doesn't seem to be fixed in Firefox 45 (2015-11-15) and Firefox 44 (2015-11-15) because the browser default dialog still appears only 2 times. In Comment 7 was specified that the bug has been verified as fixed on Nightly 44.0a1(2015-10-07), but the bug is also reproducible on this build. Jared, should I reopen this bug or file separate one?
Flags: needinfo?(jaws)
Can you explain what you mean by "but this bug is also reproducible on this build". What version is "this build" referring to? This is only going to be fixed on Nightly and Aurora/DevChannel builds until we determine if the changes to the default browser dialog should get shipped to Beta and Release builds.
Flags: needinfo?(jaws)
(In reply to (Partly offline 11/16) Jared Wein [:jaws] (please needinfo? me) from comment #9) > Can you explain what you mean by "but this bug is also reproducible on this > build". What version is "this build" referring to? I referred to Nightly 44.0a1(2015-10-07) where this bug was supposed to be fixed, because the fix had landed in Nightly 44.0a1 from 2015-09-29. > This is only going to be fixed on Nightly and Aurora/DevChannel builds until > we determine if the changes to the default browser dialog should get shipped > to Beta and Release builds. As I mentioned in Comment 8, in latest Nightly 45.0a1(2015-11-16) and latest Aurora 44.0a2(2015-11-17) the default dialog appears only 2 times, so this issue is still reproducible.
Thanks for the clarification and sorry for not understanding what you were talking about sooner. Yes, this is indeed broken. Since this bug has been closed for some time I'll file a new bug and put up a patch there to fix it.
Depends on: 1225648
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: