Bug 1208000 - Default browser dialog appears only 2 times. r=Gijs, a=lizzard